--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,11 +18,21 @@ set -g mouse on
 set -g base-index 1
 setw -g pane-base-index 1
 
-# ペイン分割をわかりやすく
+# --- 既存の設定 ---
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
+
+# --- 全体を突き抜ける「大分割」シリーズ ---
+# 右に大きく
+bind-key R split-window -hf -c "#{pane_current_path}"
+# 左に大きく (before)
+bind-key L split-window -hbf -c "#{pane_current_path}"
+# 下に大きく
+bind-key D split-window -v -f -c "#{pane_current_path}"
+# 上に大きく (before)
+bind-key U split-window -vb -f -c "#{pane_current_path}"
 
 # ペイン移動をvimライクに
 bind h select-pane -L
@@ -66,3 +76,14 @@ bind -T copy-mode-vi V send -X select-line
 
 # 4. 'y' でクリップボードにコピー (Vimのy)
 bind -T copy-mode-vi y send -X copy-pipe-and-cancel "pbcopy"
+
+# ==================== OS判定 & 初期設定 ====================
+if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "exec reattach-to-user-namespace -l $SHELL"'
+
+# ==================== 通知設定 ====================
+# ウィンドウの活動監視（裏で処理が終わったら色が変わる）
+setw -g monitor-activity on
+set -g visual-activity off  # 画面下メッセージはウザいのでオフ（ステータスバーの色変化のみ）
+
+# アクティブなウィンドウがある時のステータスバーの色
+setw -g window-status-activity-style bg=colour237,fg=colour166,bold
